# backend/docs/swagger.json
@@ -552,11 +552,6 @@
         },
         "/podcasts/search": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "iTunes API を使ってポッドキャストを検索します",
                 "produces": [
                     "application/json"
